# salspy

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  schema.sql  schema_sqlite.sql
.github/workflows/: release.yml
salspy-cli/: Cargo.toml
salspy-cli/src/: main.rs
salspy-core/: Cargo.toml
salspy-core/src/: database.rs  import.rs  lib.rs  settings.rs
salspy-gui/: Cargo.toml
salspy-gui/src/: main.rs
sample/: compare_sample.ndjson  export_sample.ndjson
schemas/: schema_postgres.sql
src/: database.rs  main.rs  model.rs  settings.rs
