[package]
name = "salgui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
anyhow = "1.0.102"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rfd = "0.17.2"
postgres = "0.19.13"
dirs = "6.0.0"
toml = "1.1.2+spec-1.1.0"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "linux-native"]}
