[package]
name = "salspy-core"
version = "1.0.0"
authors = ["junyali"]
license = "MIT"
edition = "2024"
repository = "https://github.com/junyali/salspy"
description = "Core package for salspy"

[dependencies]
anyhow = "1.0.102"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
postgres = "0.19.13"
dirs = "6.0.0"
toml = "1.1.2+spec-1.1.0"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "linux-native"] }
